# hacking-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: safety_policy.yaml
src/hacking_mcp/: __init__.py  __main__.py  ai_help.py  assets.py  command.py  environment.py  formatters.py  install.py  models.py  orchestrator.py  providers.py  registry.py  runner.py  safety.py  server.py  tasks.py
src/hacking_mcp/mcp_tools/: __init__.py  ad_tools.py  adapter_research.py  adapter_types.py  asset_tools.py  cloud_tools.py  discovery.py  exploit.py  forensics_tools.py  helpers.py  install_tools.py  recon.py  scanner.py  task_tools.py  tool_adapters.py  web.py
src/hacking_mcp/mcp_tools/adapters/: __init__.py  advphishing.py  airgeddon.py  allinone_socialmedia.py  amass.py  androguard.py  anonsurf.py  apk2gold.py  appcheck.py  arjun.py  asyncrone.py  autophisher.py  autopsy.py  bettercap.py  binwalk.py  (+173 more)
src/hacking_mcp/tools/: __init__.py  active_directory.py  anonsurf.py  cloud_security.py  ddos.py  exploit_frameworks.py  forensics.py  information_gathering.py  mobile_security.py  other_tools.py  payload_creator.py  phishing_attack.py  post_exploitation.py  remote_administration.py  reverse_engineering.py  sql_injection.py  steganography.py  web_attack.py  wireless_attack.py  wordlist_generator.py  xss_attack.py
tests/: __init__.py  test_ai_help.py  test_assets.py  test_command.py  test_environment.py  test_formatters.py  test_install.py  test_orchestrator.py  test_registry.py  test_runner.py  test_safety.py  test_server.py  test_tasks.py  test_tool_adapters.py
